# alma_assignment

./: .env.example  .gitignore  AGENT_SESSION_TRANSCRIPT.md  DESIGN.md  Dockerfile.backend  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test.db
frontend/: .env.local.example  Dockerfile  next.config.mjs  next.config.ts  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/apply/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: LeadsTable.tsx  Pagination.tsx  StatusBadge.tsx
frontend/lib/: api.ts  auth.ts
src/alma_assignment/: __init__.py  main.py
src/alma_assignment.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/alma_assignment/api/: dependencies.py
src/alma_assignment/api/v1/: auth.py  leads.py  router.py
src/alma_assignment/core/: config.py  security.py
src/alma_assignment/db/: models.py  session.py
src/alma_assignment/db/migrations/: env.py
src/alma_assignment/db/migrations/versions/: 001_initial_schema.py
src/alma_assignment/schemas/: auth.py  lead.py
src/alma_assignment/services/: email.py  storage.py
tests/: conftest.py  test_auth.py  test_leads_api.py
